hphp/hack/test/typecheck/expression_trees/mismatched_types.php.exp
File "mismatched_types.php", line 8, characters 5-10:
Typing error (Typing[4110])
  File "mismatched_types.php", line 8, characters 5-6:
  Expected `num` because this is used in an arithmetic operation
  File "mismatched_types.php", line 7, characters 10-16:
  But got `string`
